--- a/testhtml.html
+++ b/testhtml.html
@@ -10,6 +10,10 @@
     <h1>Pruebas git</h1>
       <ul>
           <li>paso1:Iniciar el repositorio:gitint</li>
+          
+          <li>paso2:Subir un archivo</li>
+
+
       </ul>
 </body>
 </html>
