--- a/testhtml.html
+++ b/testhtml.html
@@ -12,7 +12,7 @@
           <li>paso1:Iniciar el repositorio:gitint</li>
           
           <li>paso2:Subir un archivo</li>
-
+          <li>paso3: bryan esta en casa</li>
 
       </ul>
 </body>
